# serializer version: 1
# name: test_button[button.dishwasher_appliance_pause-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.dishwasher_appliance_pause',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Appliance pause',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Appliance pause',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'pause',
    'unique_id': '911438421_03:33109002-443E07338CF5_pause',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[button.dishwasher_appliance_pause-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Dishwasher Appliance pause',
    }),
    'context': <ANY>,
    'entity_id': 'button.dishwasher_appliance_pause',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[button.dishwasher_appliance_resume-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.dishwasher_appliance_resume',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Appliance resume',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Appliance resume',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'resume',
    'unique_id': '911438421_03:33109002-443E07338CF5_resume',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[button.dishwasher_appliance_resume-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Dishwasher Appliance resume',
    }),
    'context': <ANY>,
    'entity_id': 'button.dishwasher_appliance_resume',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[button.dishwasher_appliance_start-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.dishwasher_appliance_start',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Appliance start',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Appliance start',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'start',
    'unique_id': '911438421_03:33109002-443E07338CF5_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[button.dishwasher_appliance_start-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Dishwasher Appliance start',
    }),
    'context': <ANY>,
    'entity_id': 'button.dishwasher_appliance_start',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[button.dishwasher_appliance_stop-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.dishwasher_appliance_stop',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Appliance stop',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Appliance stop',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'stop',
    'unique_id': '911438421_03:33109002-443E07338CF5_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[button.dishwasher_appliance_stop-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Dishwasher Appliance stop',
    }),
    'context': <ANY>,
    'entity_id': 'button.dishwasher_appliance_stop',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[button.dryer_appliance_pause-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.dryer_appliance_pause',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Appliance pause',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Appliance pause',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'pause',
    'unique_id': '999120000_00:74852244-443E0704101F_pause',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[button.dryer_appliance_pause-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Dryer Appliance pause',
    }),
    'context': <ANY>,
    'entity_id': 'button.dryer_appliance_pause',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[button.dryer_appliance_resume-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.dryer_appliance_resume',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Appliance resume',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Appliance resume',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'resume',
    'unique_id': '999120000_00:74852244-443E0704101F_resume',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[button.dryer_appliance_resume-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Dryer Appliance resume',
    }),
    'context': <ANY>,
    'entity_id': 'button.dryer_appliance_resume',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[button.dryer_appliance_start-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.dryer_appliance_start',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Appliance start',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Appliance start',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'start',
    'unique_id': '999120000_00:74852244-443E0704101F_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[button.dryer_appliance_start-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Dryer Appliance start',
    }),
    'context': <ANY>,
    'entity_id': 'button.dryer_appliance_start',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[button.dryer_appliance_stop-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.dryer_appliance_stop',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Appliance stop',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Appliance stop',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'stop',
    'unique_id': '999120000_00:74852244-443E0704101F_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[button.dryer_appliance_stop-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Dryer Appliance stop',
    }),
    'context': <ANY>,
    'entity_id': 'button.dryer_appliance_stop',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[button.fenix_appliance_start-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.fenix_appliance_start',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Appliance start',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Appliance start',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'start',
    'unique_id': '900412569_00:43319382-443E0748CCD4_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[button.fenix_appliance_start-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fenix Appliance start',
    }),
    'context': <ANY>,
    'entity_id': 'button.fenix_appliance_start',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[button.fenix_appliance_stop-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.fenix_appliance_stop',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Appliance stop',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Appliance stop',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'stop',
    'unique_id': '900412569_00:43319382-443E0748CCD4_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[button.fenix_appliance_stop-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fenix Appliance stop',
    }),
    'context': <ANY>,
    'entity_id': 'button.fenix_appliance_stop',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[button.pux_pizza_oven_appliance_start-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.pux_pizza_oven_appliance_start',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Appliance start',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Appliance start',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'start',
    'unique_id': '949288049_00:11112225-443E076A37D6_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[button.pux_pizza_oven_appliance_start-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'PUX pizza oven Appliance start',
    }),
    'context': <ANY>,
    'entity_id': 'button.pux_pizza_oven_appliance_start',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[button.pux_pizza_oven_appliance_stop-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.pux_pizza_oven_appliance_stop',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Appliance stop',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Appliance stop',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'stop',
    'unique_id': '949288049_00:11112225-443E076A37D6_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[button.pux_pizza_oven_appliance_stop-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'PUX pizza oven Appliance stop',
    }),
    'context': <ANY>,
    'entity_id': 'button.pux_pizza_oven_appliance_stop',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[button.supex_oven_upper_oven_start-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.supex_oven_upper_oven_start',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Upper oven start',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Upper oven start',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'upperoven_start',
    'unique_id': '944035064_00:27032025-443E073D97B2_upperoven_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[button.supex_oven_upper_oven_start-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Supex oven Upper oven start',
    }),
    'context': <ANY>,
    'entity_id': 'button.supex_oven_upper_oven_start',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[button.supex_oven_upper_oven_stop-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.supex_oven_upper_oven_stop',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Upper oven stop',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Upper oven stop',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'upperoven_stop',
    'unique_id': '944035064_00:27032025-443E073D97B2_upperoven_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[button.supex_oven_upper_oven_stop-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Supex oven Upper oven stop',
    }),
    'context': <ANY>,
    'entity_id': 'button.supex_oven_upper_oven_stop',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[button.washer_dryer_appliance_pause-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.washer_dryer_appliance_pause',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Appliance pause',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Appliance pause',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'pause',
    'unique_id': '999007132_50:23300001-443E0733A070_pause',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[button.washer_dryer_appliance_pause-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Washer dryer Appliance pause',
    }),
    'context': <ANY>,
    'entity_id': 'button.washer_dryer_appliance_pause',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[button.washer_dryer_appliance_resume-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.washer_dryer_appliance_resume',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Appliance resume',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Appliance resume',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'resume',
    'unique_id': '999007132_50:23300001-443E0733A070_resume',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[button.washer_dryer_appliance_resume-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Washer dryer Appliance resume',
    }),
    'context': <ANY>,
    'entity_id': 'button.washer_dryer_appliance_resume',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[button.washer_dryer_appliance_start-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.washer_dryer_appliance_start',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Appliance start',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Appliance start',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'start',
    'unique_id': '999007132_50:23300001-443E0733A070_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[button.washer_dryer_appliance_start-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Washer dryer Appliance start',
    }),
    'context': <ANY>,
    'entity_id': 'button.washer_dryer_appliance_start',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[button.washer_dryer_appliance_stop-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.washer_dryer_appliance_stop',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Appliance stop',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Appliance stop',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'stop',
    'unique_id': '999007132_50:23300001-443E0733A070_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[button.washer_dryer_appliance_stop-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Washer dryer Appliance stop',
    }),
    'context': <ANY>,
    'entity_id': 'button.washer_dryer_appliance_stop',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[button.washing_machine_appliance_pause-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.washing_machine_appliance_pause',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Appliance pause',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Appliance pause',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'pause',
    'unique_id': '999007091_50:22002306-443E071A93FA_pause',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[button.washing_machine_appliance_pause-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Washing machine Appliance pause',
    }),
    'context': <ANY>,
    'entity_id': 'button.washing_machine_appliance_pause',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[button.washing_machine_appliance_resume-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.washing_machine_appliance_resume',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Appliance resume',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Appliance resume',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'resume',
    'unique_id': '999007091_50:22002306-443E071A93FA_resume',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[button.washing_machine_appliance_resume-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Washing machine Appliance resume',
    }),
    'context': <ANY>,
    'entity_id': 'button.washing_machine_appliance_resume',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[button.washing_machine_appliance_start-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.washing_machine_appliance_start',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Appliance start',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Appliance start',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'start',
    'unique_id': '999007091_50:22002306-443E071A93FA_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[button.washing_machine_appliance_start-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Washing machine Appliance start',
    }),
    'context': <ANY>,
    'entity_id': 'button.washing_machine_appliance_start',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[button.washing_machine_appliance_stop-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.washing_machine_appliance_stop',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Appliance stop',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Appliance stop',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'stop',
    'unique_id': '999007091_50:22002306-443E071A93FA_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[button.washing_machine_appliance_stop-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Washing machine Appliance stop',
    }),
    'context': <ANY>,
    'entity_id': 'button.washing_machine_appliance_stop',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
